--- a/azure-deploy/azure_deploy2/frontend/index.html
+++ b/azure-deploy/azure_deploy2/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8"><title>Simple App</title></head>
 <body>
-  <h1>Simple Frontend</h1>
+  <h1>David's git Simple Frontend</h1>
   <div id="msg"></div>
   <script>
     fetch('/api/hello')
@@ -12,4 +12,5 @@
   </script>
 </body>
 </html>
+
 
